-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8013678 | 8 | Yumin Qi | P3 | Closed | Fixed | b88 |
There are some scattered calls to ::operator new[] and ::operator new, these may cause the c++ runtime to throw std::bad_alloc and cause the VM to shutdown without printing a diagnostic message.
To verify that this has been fixed (on linux at leats) run something like the following (based on Ioi's suggestion)
$ cd $HOTSPOT/build/linux/linux_amd64_compiler2/product
$ for i in *.o; do nm $i > $i.nm; done
$ egrep '((_Znwm)|(_Znam))' *.nm | c++filt
To verify that this has been fixed (on linux at leats) run something like the following (based on Ioi's suggestion)
$ cd $HOTSPOT/build/linux/linux_amd64_compiler2/product
$ for i in *.o; do nm $i > $i.nm; done
$ egrep '((_Znwm)|(_Znam))' *.nm | c++filt
- backported by
-
JDK-8013678 Remove calls to global ::operator new[] and new
-
- Closed
-
- duplicates
-
JDK-7045180 unexpected C++ exception in ObjectSynchronizer::inflate
-
- Closed
-
- relates to
-
JDK-8012902 remove use of global operator new - take 2
-
- Closed
-
-
JDK-8012907 anti-delta fix for 8010992
-
- Closed
-
-
JDK-7045180 unexpected C++ exception in ObjectSynchronizer::inflate
-
- Closed
-
-
JDK-8012272 HandleMark should be declared as stack object
-
- Closed
-
(1 relates to)